добавлен функционал работы с db, расширен основной функционал по тз